tests/baselines/reference/parser509693.errors.txt
==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509693.ts (2 errors) ====
    if (!module.exports) module.exports = "";
         ~~~~~~
!!! error TS2304: Cannot find name 'module'.
                         ~~~~~~
!!! error TS2304: Cannot find name 'module'.